added google auth

--- a/TournamentApp/appsettings.json
+++ b/TournamentApp/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:main1.database.windows.net,1433;Initial Catalog=main1;Persist Security Info=False;User ID=main-admin;Password=User.1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "44753439796-lhk0eqg8dbppmfs15uh0vfs29a9a3a8h.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
